--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.14.2",
+    "@babel/core": "^7.14.3",
     "@babel/node": "^7.14.2",
     "@babel/preset-env": "^7.14.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
-    "mongoose": "^5.12.9",
+    "express-list-endpoints": "^5.0.0",
+    "mongoose": "^5.12.10",
     "nodemon": "^2.0.7"
   },
   "devDependencies": {
